--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+html{
+  display: flex;
+
+
+}
+
 body {
   margin: 0;
+  padding-right: 0 !important;
+  overflow: unset !important;
+  
 
 }
 
@@ -42,7 +51,7 @@ body {
 
 .image-container {
   position: relative;
-  display: inline-block;
+  display: "flex";
   width: 100%;
   /* Ensure the container takes the full width */
   /* max-width: 600px; */
@@ -68,7 +77,7 @@ img {
   padding: 10px 20px;
   cursor: pointer;
   z-index: 1;
-  text-align: center;
+  text-align: end;
 }
 
 @media (max-width: 768px) {
@@ -77,4 +86,103 @@ img {
     /* Example of responsive font size */
     padding: 8px 16px;
   }
+}
+
+@media screen and (max-width: 768px) {
+  html {
+    /* display: flex; */
+    padding-right: 0;
+    overflow: unset;
+  }
+
+  body {
+    padding-right: 0;
+    overflow: unset;
+    
+  }
+
+  .overlay-button {
+    bottom: 5%;
+    /* Adjusted position for smaller screens */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .overlay-button {
+    padding: 15px;
+    /* Adjust padding for smaller screens */
+  }
+}
+
+.description {
+  margin-bottom: 28px;
+  max-width: 230px;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 17px;
+  display: block;
+}
+
+#Mutliback1 {
+  margin: 1rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 45px;
+  border: 2px solid rgb(221, 215, 215);
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-size: cover;
+}
+
+.ysera-subtitle {
+  color: #c09578;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 0 0 5px;
+  margin-bottom: 0;
+  text-transform: uppercase;
+  font-family: 'Roboto';
+}
+
+.title {
+  font-weight: 700;
+  line-height: 1;
+  text-transform: capitalize;
+  margin-bottom: 12px;
+  font-size: 26px;
+  line-height: 32px;
+  font-size: 24px;
+  margin-top: 0;
+}
+
+.description {
+  margin-bottom: 28px;
+  max-width: 230px;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 17px;
+  display: block;
+}
+
+.button {
+  border: 1px solid #c09578;
+  color: #fff;
+  background-color: #c09578;
+  padding-right: 25px;
+  padding-left: 25px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-right: 5px;
+  border-radius: 30px;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.button:hover{
+  background-color: #000;
 }
