--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html{
 body {
   margin: 0;
   padding-right: 0 !important;
-  overflow-x: hidden !important;
+  /* overflow-x: hidden !important; */
   
 
 }
