--- a/src/pages/login/loginForm/loginForm.css
+++ b/src/pages/login/loginForm/loginForm.css
@@ -1,6 +1,7 @@
 #loginFormContainer {
     background-color: #fff;
-    padding: 30px 50px;
+    /* padding: 30px 50px; */
+    padding: 4vh 3.4vw; /
 
 }
 
