--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -40,7 +40,7 @@
 .help-description {
     font-size: 14px !important;
     color: var(--custom-color) !important;
-    
+
 
 
 }
@@ -65,25 +65,30 @@
     }
 }
 
-
 .parent {
     position: relative;
-    width: 100%;
-    height: 200px; /* Set height as needed */
+    width: 90%;
+    /* height: 200px; */
     background-color: antiquewhite;
-    max-width: 1230px;
+    max-width: 1260px;
     margin: 0 auto;
     margin-bottom: 100px;
-    height: 400px;
+    height: 350px;
     margin: 200px auto;
-  }
-  .child {
+    background-image: url("https://meteor.stullercloud.com/das/47191190");
+    border: 1px solid transparent;
+    border-radius: 5px;
+}
+
+.child {
     position: absolute;
+    /* box-sizing: border-box; */
     top: 0;
     height: 100%;
     width: 50%;
-  }
-  .child:nth-child(1) {
+}
+
+.child:nth-child(1) {
     position: absolute;
     top: -70px;
     left: 5%;
@@ -91,37 +96,50 @@
     width: 50%;
     background-color: #FFF;
     border: 1px solid #BBB;
-    padding: 30px 50px;
+    /* padding: 30px 50px; */
     border-radius: 5px;
-  }
-  .child:nth-child(2) {
-    color: #fff;
-    position: absolute;
-    width: 30%;
-    top: 0;
-    left: 63%;
-    padding: 50px;
-    background-color: aqua;
-  }
-
-/* Media query for tablets and larger screens */
-@media (min-width: 768px) {
-    .child:nth-child(1) {
-        width: 45%; /* Adjust width for tablets */
-    }
-
-    .child:nth-child(2) {
-        width: 35%; /* Adjust width for tablets */
-    }
 }
 
-/* Media query for desktops and larger screens */
-@media (min-width: 992px) {
+.child:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    height: 324px;
+    color: #fff;
+    position: absolute;
+    width: 39%;
+    top: 0;
+    left: 55%;
+    padding: 3vw;
+    /* background-color: aqua; */
+    max-width: 550px;
+
+}
+
+@media screen and (max-width: 768px) {
+    .parent {
+        width: 95%;
+        margin: 100px auto 500px !important;
+        background-image: none;
+    }
+
+    .child {
+        width: 100%;
+    }
+
     .child:nth-child(1) {
-        width: 40%; /* Adjust width for desktops */
+        left: 0;
+        width: 100%;
     }
 
     .child:nth-child(2) {
-        width: 30%; /* Adjust width for desktops */
+        left: 0;
+        width: 95%;
+        max-width: 100%;
+        top: 120%;
+        color: #555;
+        gap: 0 !important;
+        margin-top: 4rem;
+
     }
 }
