validation and changes in login screen

--- a/src/pages/accountSignup/signUpForm/signUpForm.css
+++ b/src/pages/accountSignup/signUpForm/signUpForm.css
@@ -32,6 +32,11 @@
     color: #fff;
 }
 
+.apply-btn:hover{
+    background-color: #fff !important;
+    color: black !important;
+}
+
 .privacy-container {
     margin-top: 1.3rem;
 }
