--- a/src/components/carousel/productsToConsider.css
+++ b/src/components/carousel/productsToConsider.css
@@ -1,9 +1,9 @@
 .slide-content:hover .product-description {
-    color: #75b0da;
+    color: #75b0da !important;
     /* Change to the desired highlight color */
 }
 
 .product-description{
-    font-size: 14px;
-    color: #555;
+    font-size: 14px !important;
+    color: #555 !important;
 }
