--- a/src/pages/catalogs/catalogSlider/catalogSlider.css
+++ b/src/pages/catalogs/catalogSlider/catalogSlider.css
@@ -21,3 +21,71 @@
 .next-button {
     background-color: #aaa;
 } */
+
+.slick-dots {
+
+    /* bottom: 50px; */
+    li button:before,
+    li.slick-active button:before {
+        color: transparent;
+        opacity: 1;
+    }
+
+    li button:before {
+        background-color: #869791;
+        border: 4px solid #fff;
+        border-radius: 50%;
+        display: inline-block;
+        height: 12px;
+        width: 12px;
+        opacity: .5;
+
+    }
+
+    li.slick-active button:before {
+        background-color: #869791;
+    }
+}
+
+/* .catalog-button {
+    padding: 0px;
+    font-size: 18px !important;
+    background: none;
+    color: #444 !important;
+    cursor: pointer;
+    opacity: .5;
+}
+
+.catalog-button .prev-btn:hover{
+    opacity: 1 !important;
+
+}
+
+.catalog-button .prev-nxt{
+    
+} */
+
+.catalog-button {
+    padding: 0;
+    font-size: 18px !important;
+    background: none;
+    color: #444 !important;
+    cursor: pointer;
+    opacity: 0.5;
+    border: none;
+    text-transform: none;
+    margin: 2.5rem .5rem !important;
+
+  }
+  
+  .catalog-button:hover {
+    opacity: 1 !important;
+  }
+
+  .catalog-button .prev-btn {
+    margin: 5px;
+  }
+  
+  .catalogs-settings{
+    margin: 2rem 0 3rem !important;
+  }
