--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-html{
-  /* display: flex; */
-
-
-}
 
 body {
   margin: 0;
@@ -12,34 +7,9 @@ body {
 
 }
 body {
-  font-family: 'Roboto', sans-serif; /* Use Roboto font with fallback to sans-serif */
+  font-family: 'Roboto', sans-serif;
 }
 
-
-/* .image-container {
-  position: relative;
-  display: inline-block;
-} */
-
-/* .overlay-button {
-  position: absolute;
-  top: 60%;
-  left: 80%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.003);
-  color: #000;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
-  z-index: 1;
-  text-wrap: nowrap;
-  text-align-last: end;
-} */
-
-/* img {
-  display: block;
-  max-width: 100%;
-} */
 
 .linkStyle {
   text-decoration: none;
@@ -57,17 +27,10 @@ body {
   position: relative;
   display: "flex";
   width: 100%;
-  /* Ensure the container takes the full width */
-  /* max-width: 600px; */
-  /* Limit the maximum width of the container */
 }
 
 img {
   max-width: 100%;
-  /* Ensure the image scales with its container */
-  /* height: ; */
-  /* max-height: "400px"; */
-  /* Maintain aspect ratio */
 }
 
 .overlay-button {
@@ -75,8 +38,6 @@ img {
   bottom: 25%;
   left: 75%;
   transform: translateX(-50%);
-  /* Center horizontally */
-  /* background-color: rgba(0, 0, 0, 0.3); */
   color: #000;
   padding: 10px 20px;
   cursor: pointer;
@@ -87,14 +48,12 @@ img {
 @media (max-width: 768px) {
   .overlay-button {
     font-size: 1.2em;
-    /* Example of responsive font size */
     padding: 8px 16px;
   }
 }
 
 @media screen and (max-width: 768px) {
   html {
-    /* display: flex; */
     padding-right: 0;
     overflow: unset;
   }
@@ -107,14 +66,12 @@ img {
 
   .overlay-button {
     bottom: 5%;
-    /* Adjusted position for smaller screens */
   }
 }
 
 @media screen and (max-width: 480px) {
   .overlay-button {
     padding: 15px;
-    /* Adjust padding for smaller screens */
   }
   #footer-section {
     background-color: red;
