Added the products caraosel fix

--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,7 @@ img {
     /* Adjust padding for smaller screens */
   }
   #footer-section {
-    background-color: red;
+    /* background-color: red; */
   }
 }
 
